--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "name": "@balena/open-balena-api",
-  "private": true,
   "description": "Internet of things, Made Simple",
   "version": "0.0.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/balena-io/open-balena-api"
+  },
+  "main": "dist/index",
+  "files": [
+    "dist/"
+  ],
+  "scripts": {
+    "build": "npm run clean && tsc --project . && copyup \"src/**/*.sbvr\" \"src/**/*.sql\" dist/",
+    "clean": "rimraf dist/",
+    "lint": "resin-lint --typescript src/ && tsc --noEmit --project .",
+    "prettify": "prettier --config ./node_modules/resin-lint/config/.prettierrc --write \"src/**/*.ts\" \"typings/**/*.ts\"",
+    "prepare": "npm run build"
   },
   "dependencies": {
     "@resin.io/device-types": "^10.4.1",
@@ -66,7 +76,14 @@
     "typed-error": "^2.0.0",
     "typescript": "^3.1.3"
   },
-  "optionalDependencies": {},
+  "devDependencies": {
+    "copyfiles": "^2.1.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.3.0",
+    "prettier": "^1.14.3",
+    "resin-lint": "^2.0.0",
+    "rimraf": "^2.6.1"
+  },
   "engines": {
     "node": ">=8.0"
   }
