--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/express-brute": "0.0.35",
     "@types/express-brute-redis": "0.0.0",
     "@types/ip": "0.0.31",
+    "@types/json-schema": "^7.0.1",
     "@types/jsonwebtoken": "^7.2.7",
     "@types/lodash": "4.14.106",
     "@types/morgan": "^1.7.35",
@@ -54,6 +55,7 @@
     "fast-boot": "^1.0.7",
     "ip": "^1.0.1",
     "ipaddr.js": "^1.3.0",
+    "json-schema": "^0.2.3",
     "jsonwebtoken": "^8.2.2",
     "lodash": "^4.17.10",
     "memoizee": "^0.4.14",
