--- a/package.json
+++ b/package.json
@@ -19,18 +19,17 @@
   },
   "dependencies": {
     "@resin.io/device-types": "^10.4.1",
-    "@resin/pinejs": "^9.0.2",
+    "@resin/pinejs": "^9.0.3",
     "@types/basic-auth": "^1.1.2",
     "@types/bluebird": "^3.5.23",
     "@types/cookie-session": "^2.0.36",
     "@types/express": "^4.0.37",
     "@types/express-brute": "0.0.35",
     "@types/express-brute-redis": "0.0.0",
-    "@types/ip": "0.0.31",
     "@types/json-schema": "^7.0.1",
     "@types/jsonwebtoken": "^7.2.7",
     "@types/lodash": "4.14.106",
-    "@types/morgan": "^1.7.35",
+    "@types/memoizee": "^0.4.2",
     "@types/node": "^8.10.36",
     "@types/node-uuid": "0.0.28",
     "@types/passport-jwt": "^3.0.1",
@@ -44,8 +43,6 @@
     "basic-auth": "^2.0.1",
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
-    "coffee-cache": "^1.0.2",
-    "coffee-script": "~1.12.6",
     "compression": "^1.7.3",
     "cookie-parser": "^1.4.1",
     "cookie-session": "^1.0.0",
@@ -53,14 +50,12 @@
     "express-brute": "^1.0.1",
     "express-brute-redis": "0.0.1",
     "fast-boot": "^1.0.7",
-    "ip": "^1.0.1",
     "ipaddr.js": "^1.3.0",
     "json-schema": "^0.2.3",
     "jsonwebtoken": "^8.2.2",
     "lodash": "^4.17.10",
     "memoizee": "^0.4.14",
     "method-override": "^2.3.5",
-    "morgan": "^1.9.1",
     "ndjson": "1.5.0",
     "node-uuid": "~1.4.0",
     "passport": "^0.4.0",
