--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@balena/open-balena-api",
   "description": "Internet of things, Made Simple",
   "version": "0.1.1",
+  "license": "AGPL-3.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/balena-io/open-balena-api"
