--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "clean": "rimraf dist/",
     "lint": "resin-lint --typescript src/ && tsc --noEmit --project .",
     "prettify": "prettier --config ./node_modules/resin-lint/config/.prettierrc --write \"src/**/*.ts\" \"typings/**/*.ts\"",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "@resin.io/device-types": "^10.4.1",
@@ -76,7 +77,7 @@
   "devDependencies": {
     "copyfiles": "^2.1.0",
     "husky": "^0.14.3",
-    "lint-staged": "^7.3.0",
+    "lint-staged": "^8.0.4",
     "prettier": "^1.14.3",
     "resin-lint": "^2.0.0",
     "rimraf": "^2.6.1"
