Add missing VPN env vars
This ensures the variables for OpenVPN are properly set in the environment and also moves them into `lib/config`.

Change-type: patch

--- a/config/confd_env_backend/conf.d/env.toml
+++ b/config/confd_env_backend/conf.d/env.toml
@@ -10,6 +10,9 @@ keys = [
 	"DB_PORT",
 	"DB_USER",
 	"DELTA_HOST",
+	"DEVICE_CONFIG_OPENVPN_CA",
+	"DEVICE_CONFIG_OPENVPN_CONFIG",
+	"DEVICE_CONFIG_SSH_AUTHORIZED_KEYS",
 	"HOST",
 	"IMAGE_MAKER_URL",
 	"IMAGE_STORAGE_BUCKET",
