Update to ts-node 7
Change-type: patch

--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "@types/express-brute": "0.0.35",
     "@types/express-brute-redis": "0.0.0",
     "@types/json-schema": "^7.0.1",
-    "@types/jsonwebtoken": "^7.2.7",
-    "@types/lodash": "4.14.106",
+    "@types/jsonwebtoken": "^8.3.0",
+    "@types/lodash": "^4.14.117",
     "@types/memoizee": "^0.4.2",
-    "@types/node": "^8.10.36",
+    "@types/node": "^8.10.37",
     "@types/node-uuid": "0.0.28",
     "@types/passport-jwt": "^3.0.1",
     "@types/randomstring": "^1.1.6",
@@ -41,7 +41,7 @@
     "@types/request": "^2.48.0",
     "array-sort": "^1.0.0",
     "avsc": "^5.4.6",
-    "aws-sdk": "^2.346.0",
+    "aws-sdk": "^2.347.0",
     "basic-auth": "^2.0.1",
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
@@ -66,13 +66,13 @@
     "raven": "^2.6.4",
     "redis": "^2.8.0",
     "request": "^2.85.0",
-    "resin-device-config": "^5.0.0",
+    "resin-device-config": "^5.1.0",
     "resin-semver": "^1.4.0",
     "supervisor": "^0.12.0",
     "thirty-two": "^1.0.0",
-    "ts-node": "^6.0.3",
+    "ts-node": "^7.0.1",
     "typed-error": "^2.0.0",
-    "typescript": "^3.1.5"
+    "typescript": "^3.1.6"
   },
   "devDependencies": {
     "copyfiles": "^2.1.0",
