auth: Create admin account on first run
If the container is started with the following ENV vars set;
- SUPERUSER_EMAIL
- SUPERUSER_PASSWORD

then on startup, it will try and create the admin user with these values.

Change-type: patch
Signed-off-by: Rich Bayliss <rich@balena.io>

--- a/config/confd_env_backend/conf.d/env.toml
+++ b/config/confd_env_backend/conf.d/env.toml
@@ -28,6 +28,8 @@ keys = [
 	"REGISTRY2_HOST",
 	"REGISTRY_HOST",
 	"SENTRY_DSN",
+	"SUPERUSER_EMAIL",
+	"SUPERUSER_PASSWORD",
 	"TOKEN_AUTH_BUILDER_TOKEN",
 	"TOKEN_AUTH_CERT_ISSUER",
 	"TOKEN_AUTH_CERT_KEY",
@@ -36,5 +38,5 @@ keys = [
 	"TOKEN_AUTH_JWT_ALGO",
 	"VPN_HOST",
 	"VPN_PORT",
-	"VPN_SERVICE_API_KEY",
+	"VPN_SERVICE_API_KEY"
 ]
