--- a/.resinci.yml
+++ b/.resinci.yml
@@ -1,4 +1,26 @@
 ---
+npm:
+  platforms:
+    - name: linux
+      os: ubuntu
+      architecture: x86_64
+      node_versions:
+        - "6"
+        - "8"
+        - "10"
+    - name: linux
+      os: alpine
+      architecture: x86_64
+      node_versions:
+        - "6"
+        - "8"
+        - "10"
+    - name: linux
+      os: ubuntu
+      architecture: x86
+      node_versions:
+        - "6"
+        - "8"
 docker:
   builds:
     - path: .
