--- a/package.json
+++ b/package.json
@@ -22,18 +22,18 @@
   },
   "dependencies": {
     "@resin.io/device-types": "^10.4.1",
-    "@resin/pinejs": "^10.0.0",
+    "@resin/pinejs": "^10.1.0",
     "@types/basic-auth": "^1.1.2",
-    "@types/bluebird": "^3.5.23",
+    "@types/bluebird": "^3.5.25",
     "@types/cookie-session": "^2.0.36",
     "@types/express": "^4.0.37",
     "@types/express-brute": "0.0.35",
     "@types/express-brute-redis": "0.0.0",
     "@types/json-schema": "^7.0.1",
     "@types/jsonwebtoken": "^8.3.0",
-    "@types/lodash": "^4.14.118",
+    "@types/lodash": "^4.14.119",
     "@types/memoizee": "^0.4.2",
-    "@types/node": "^8.10.38",
+    "@types/node": "^8.10.39",
     "@types/node-uuid": "0.0.28",
     "@types/passport-jwt": "^3.0.1",
     "@types/randomstring": "^1.1.6",
@@ -42,7 +42,7 @@
     "@types/request": "^2.48.1",
     "array-sort": "^1.0.0",
     "avsc": "^5.4.7",
-    "aws-sdk": "^2.372.0",
+    "aws-sdk": "^2.379.0",
     "basic-auth": "^2.0.1",
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
@@ -52,7 +52,7 @@
     "express": "^4.16.4",
     "express-brute": "^1.0.1",
     "express-brute-redis": "0.0.1",
-    "fast-boot": "^1.0.7",
+    "fast-boot2": "^1.0.8",
     "ipaddr.js": "^1.3.0",
     "json-schema": "^0.2.3",
     "jsonwebtoken": "^8.4.0",
@@ -77,7 +77,7 @@
   },
   "devDependencies": {
     "copyfiles": "^2.1.0",
-    "husky": "^1.2.0",
+    "husky": "^1.3.0",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
     "resin-lint": "^2.0.0",
