--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
 	"models": [{
 		"modelName": "resin",
 		"modelFile": "./src/resin.sbvr",
+		"migrationsPath": "./src/migrations/",
 		"initSqlPath": "./src/resin-init.sql",
 		"apiRoot": "resin"
 	}],
