--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "lint": "resin-lint --typescript src/ && tsc --noEmit --project .",
     "prettify": "prettier --config ./node_modules/resin-lint/config/.prettierrc --write index.js \"src/**/*.ts\" \"typings/**/*.ts\"",
     "prepare": "npm run build",
-    "precommit": "lint-staged",
     "test": "npm run build && npm run lint"
   },
   "dependencies": {
@@ -85,5 +84,10 @@
   },
   "engines": {
     "node": ">=8.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
