Rename `configPath` to `config` and make sure config.json is valid
Also splits index.js to make sure the bulk of it is typed

Update pinejs from 10.8.0 to 10.11.0

Change-type: minor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,11 @@
 {
+	"extends": "./tsconfig.build",
 	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es2015",
-		"declaration": true,
-		"outDir": "dist/",
-		"rootDir": "src/",
-		"noImplicitAny": true,
-		"noUnusedParameters": true,
-		"noUnusedLocals": true,
-		"preserveConstEnums": true,
-		"removeComments": true,
-		"sourceMap": true,
-		"strictNullChecks": true,
-		"skipLibCheck": true,
-		"lib": [
-			"es6",
-			"es2016.array.include"
-		]
+		"rootDir": "./"
 	},
 	"include": [
 		"src/**/*.ts",
-		"typings/**/*.d.ts"
-	],
-	"exclude": [
-		"node_modules"
+		"typings/**/*.d.ts",
+		"*.ts"
 	]
 }
