--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "dist/"
   ],
   "scripts": {
+    "fasttest": "IMAGE_NAME=test-open-balena-api-fast ./automation/fasttest.sh",
+    "fasttest-cleanup": "IMAGE_NAME=test-open-balena-api-fast ./automation/fasttest.sh --teardown",
     "build": "npm run clean && tsc --project ./tsconfig.build.json && copyup \"src/**/*.sbvr\" \"src/**/*.sql\" dist/",
     "clean": "rimraf dist/",
     "lint": "resin-lint --typescript src/ init.ts && tsc --noEmit --project .",
     "prettify": "prettier --config ./node_modules/resin-lint/config/.prettierrc --write index.js init.ts \"src/**/*.ts\" \"typings/**/*.ts\"",
     "prepare": "npm run build",
-    "test": "npm run build && npm run lint"
+    "test": "IMAGE_NAME=test-open-balena-api ./automation/test.sh",
+    "posttest": "docker rmi test-open-balena-api"
   },
   "dependencies": {
     "@resin.io/device-types": "^10.5.0",
@@ -32,7 +35,7 @@
     "@types/jsonwebtoken": "^8.3.2",
     "@types/lodash": "^4.14.122",
     "@types/memoizee": "^0.4.2",
-    "@types/node": "^8.10.45",
+    "@types/node": "^10.14.4",
     "@types/node-uuid": "0.0.28",
     "@types/passport-jwt": "^3.0.1",
     "@types/randomstring": "^1.1.6",
@@ -70,17 +73,23 @@
     "resin-semver": "^1.5.1",
     "supervisor": "^0.12.0",
     "thirty-two": "^1.0.0",
-    "ts-node": "^7.0.1",
     "typed-error": "^2.0.0",
     "typescript": "^3.4.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.6",
+    "@types/supertest": "^2.0.7",
+    "chai": "^4.2.0",
     "copyfiles": "^2.1.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
+    "mocha": "^6.1.4",
     "prettier": "^1.17.0",
     "resin-lint": "^2.0.0",
-    "rimraf": "^2.6.3"
+    "rimraf": "^2.6.3",
+    "supertest": "^4.0.2",
+    "ts-node": "^7.0.1"
   },
   "engines": {
     "node": ">=8.0"
