--- a/repo.yml
+++ b/repo.yml
@@ -4,3 +4,5 @@ upstream:
     url: https://github.com/balena-io/pinejs
   - repo: 'open-balena-base'
     url: 'https://github.com/balena-io/open-balena-base'
+  - repo: 'typed-error'
+    url: 'https://github.com/balena-io-modules/typed-error'
