--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "resin-semver": "^1.5.1",
     "supervisor": "^0.12.0",
     "thirty-two": "^1.0.0",
+    "ts-node": "^7.0.1",
     "typed-error": "^2.0.0",
     "typescript": "^3.4.3"
   },
@@ -88,8 +89,7 @@
     "prettier": "^1.17.0",
     "resin-lint": "^2.0.0",
     "rimraf": "^2.6.3",
-    "supertest": "^4.0.2",
-    "ts-node": "^7.0.1"
+    "supertest": "^4.0.2"
   },
   "engines": {
     "node": ">=8.0"
