--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/raven": "^2.5.3",
     "@types/redis": "^2.8.16",
     "@types/request": "^2.48.4",
+    "@types/temp": "^0.8.34",
     "@types/uuid": "^3.4.8",
     "array-sort": "^1.0.0",
     "avsc": "^5.4.18",
@@ -74,7 +75,9 @@
     "request": "^2.88.2",
     "resin-device-config": "^5.1.1",
     "rsmq": "^0.12.0",
+    "resin-token": "^4.2.2",
     "supervisor": "^0.12.0",
+    "temp": "^0.9.0",
     "thirty-two": "^1.0.0",
     "ts-node": "^7.0.1",
     "typed-error": "^3.2.0",
