--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/raven": "^2.5.3",
     "@types/redis": "^2.8.13",
     "@types/request": "^2.48.3",
+    "@types/rsmq": "^0.3.27",
     "array-sort": "^1.0.0",
     "avsc": "^5.4.13",
     "aws-sdk": "^2.531.0",
@@ -71,6 +72,7 @@
     "request": "^2.85.0",
     "resin-device-config": "^5.1.1",
     "resin-semver": "^1.6.0",
+    "rsmq": "^0.11.0",
     "supervisor": "^0.12.0",
     "thirty-two": "^1.0.0",
     "ts-node": "^7.0.1",
