✨🔧: Add support for authenticated image storage access
This adds support for authenticated image storage access,
via the optional environment variables:
- IMAGE_STORAGE_ACCESS_KEY
- IMAGE_STORAGE_SECRET_KEY

Change-type: minor
Signed-off-by: Andreas Fitzek <andreas@balena.io>

--- a/config/confd_env_backend/conf.d/env.toml
+++ b/config/confd_env_backend/conf.d/env.toml
@@ -14,10 +14,12 @@ keys = [
 	"DEVICE_CONFIG_SSH_AUTHORIZED_KEYS",
 	"HOST",
 	"IMAGE_MAKER_URL",
+	"IMAGE_STORAGE_ACCESS_KEY",
 	"IMAGE_STORAGE_BUCKET",
 	"IMAGE_STORAGE_ENDPOINT",
 	"IMAGE_STORAGE_FORCE_PATH_STYLE",
 	"IMAGE_STORAGE_PREFIX",
+	"IMAGE_STORAGE_SECRET_KEY",
 	"JSON_WEB_TOKEN_EXPIRY_MINUTES",
 	"JSON_WEB_TOKEN_SECRET",
 	"MIXPANEL_TOKEN",
