✨: Use GH contracts repo to find device types
Change-type: minor
Signed-off-by: Andreas Fitzek <andreas@balena.io>

--- a/config/confd_env_backend/conf.d/env.toml
+++ b/config/confd_env_backend/conf.d/env.toml
@@ -12,6 +12,10 @@ keys = [
 	"DELTA_HOST",
 	"DEVICE_CONFIG_OPENVPN_CA",
 	"DEVICE_CONFIG_SSH_AUTHORIZED_KEYS",
+	"DEVICE_TYPE_REPO_OWNER",
+	"DEVICE_TYPE_REPO_NAME",
+	"DEVICE_TYPE_REPO_PATH",
+	"DEVICE_TYPE_REPO_REF",
 	"FILES_HOST",
 	"HOST",
 	"IMAGE_MAKER_URL",
