--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "posttest": "docker rmi test-open-balena-api"
   },
   "dependencies": {
+    "@octokit/rest": "^16.32.0",
     "@resin.io/device-types": "^10.5.0",
     "@resin/pinejs": "^11.2.1",
     "@types/basic-auth": "^1.1.3",
@@ -35,6 +36,7 @@
     "@types/jsonwebtoken": "^8.3.8",
     "@types/lodash": "^4.14.149",
     "@types/memoizee": "^0.4.3",
+    "@types/nock": "^11.1.0",
     "@types/node": "^12.12.29",
     "@types/on-finished": "^2.3.1",
     "@types/passport-jwt": "^3.0.3",
@@ -42,7 +44,8 @@
     "@types/raven": "^2.5.3",
     "@types/redis": "^2.8.16",
     "@types/request": "^2.48.4",
-    "@types/uuid": "^3.4.8",
+    "@types/tar-stream": "^2.1.0",
+    "@types/uuid": "^7.0.0",
     "array-sort": "^1.0.0",
     "avsc": "^5.4.18",
     "aws-sdk": "^2.631.0",
@@ -58,6 +61,7 @@
     "express-brute": "^1.0.1",
     "express-brute-redis": "0.0.1",
     "fast-boot2": "^1.0.9",
+    "gunzip-maybe": "^1.4.1",
     "ipaddr.js": "^1.9.1",
     "json-schema": "^0.2.5",
     "jsonwebtoken": "^8.5.1",
@@ -65,6 +69,7 @@
     "memoizee": "^0.4.14",
     "method-override": "^3.0.0",
     "ndjson": "1.5.0",
+    "nock": "^11.7.0",
     "on-finished": "^2.3.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -75,11 +80,12 @@
     "resin-device-config": "^5.1.1",
     "rsmq": "^0.12.0",
     "supervisor": "^0.12.0",
+    "tar-stream": "^2.1.0",
     "thirty-two": "^1.0.0",
     "ts-node": "^7.0.1",
     "typed-error": "^3.2.0",
     "typescript": "^3.8.3",
-    "uuid": "^3.4.0"
+    "uuid": "^7.0.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.10",
@@ -95,6 +101,7 @@
     "lint-staged": "^10.0.8",
     "mocha": "^7.1.0",
     "mockery": "^2.1.0",
+    "prettier": "^1.19.1",
     "resin-lint": "^3.3.1",
     "rimraf": "^3.0.2",
     "sinon": "^9.0.0",
