Fix cases where logs requests would exit without being cleaned up
Change-type: patch

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/memoizee": "^0.4.3",
     "@types/node": "^10.14.20",
     "@types/node-uuid": "0.0.28",
+    "@types/on-finished": "^2.3.1",
     "@types/passport-jwt": "^3.0.2",
     "@types/randomstring": "^1.1.6",
     "@types/raven": "^2.5.3",
@@ -64,6 +65,7 @@
     "method-override": "^3.0.0",
     "ndjson": "1.5.0",
     "node-uuid": "~1.4.0",
+    "on-finished": "^2.3.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "randomstring": "^1.1.5",
