--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/bluebird": "^3.5.28",
     "@types/cookie-session": "^2.0.37",
     "@types/express": "^4.17.2",
+    "@types/eventemitter3": "^2.0.2",
     "@types/express-brute": "0.0.36",
     "@types/express-brute-redis": "0.0.1",
     "@types/json-schema": "^7.0.3",
@@ -53,6 +54,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
+    "eventemitter3": "^4.0.0",
     "express": "^4.17.1",
     "express-brute": "^1.0.1",
     "express-brute-redis": "0.0.1",
@@ -86,6 +88,7 @@
     "@types/chai-as-promised": "^7.1.2",
     "@types/mocha": "^5.2.7",
     "@types/mockery": "^1.4.29",
+    "@types/sinon": "^7.5.0",
     "@types/supertest": "^2.0.8",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
@@ -97,6 +100,7 @@
     "prettier": "^1.18.2",
     "resin-lint": "^2.0.1",
     "rimraf": "^3.0.0",
+    "sinon": "^7.5.0",
     "supertest": "^4.0.2"
   },
   "engines": {
