--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "@types/lodash": "^4.14.149",
     "@types/memoizee": "^0.4.3",
     "@types/node": "^12.12.24",
-    "@types/node-uuid": "0.0.28",
     "@types/on-finished": "^2.3.1",
     "@types/passport-jwt": "^3.0.3",
     "@types/randomstring": "^1.1.6",
     "@types/raven": "^2.5.3",
     "@types/redis": "^2.8.14",
     "@types/request": "^2.48.4",
+    "@types/uuid": "^3.4.6",
     "array-sort": "^1.0.0",
     "avsc": "^5.4.18",
     "aws-sdk": "^2.602.0",
@@ -64,7 +64,6 @@
     "memoizee": "^0.4.14",
     "method-override": "^3.0.0",
     "ndjson": "1.5.0",
-    "node-uuid": "~1.4.0",
     "on-finished": "^2.3.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -79,7 +78,8 @@
     "thirty-two": "^1.0.0",
     "ts-node": "^7.0.1",
     "typed-error": "^3.2.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.7",
