--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,7 +1,6 @@
 {
 	"*.ts": [
 		"prettier --config ./node_modules/resin-lint/config/.prettierrc --write",
-		"resin-lint --typescript --no-prettier",
-		"git add"
+		"resin-lint --typescript --no-prettier"
 	],
 }
