auth: add `VPN_GUEST_API_KEY` with guest perms and rate limit exemption
Change-type: minor
Signed-off-by: Will Boyce <will@balena.io>

--- a/config/confd_env_backend/conf.d/env.toml
+++ b/config/confd_env_backend/conf.d/env.toml
@@ -38,5 +38,6 @@ keys = [
 	"TOKEN_AUTH_JWT_ALGO",
 	"VPN_HOST",
 	"VPN_PORT",
-	"VPN_SERVICE_API_KEY"
+	"VPN_SERVICE_API_KEY",
+	"VPN_GUEST_API_KEY"
 ]
