--- a/config/confd_env_backend/conf.d/env.toml
+++ b/config/confd_env_backend/conf.d/env.toml
@@ -12,6 +12,7 @@ keys = [
 	"DELTA_HOST",
 	"DEVICE_CONFIG_OPENVPN_CA",
 	"DEVICE_CONFIG_SSH_AUTHORIZED_KEYS",
+	"FILES_HOST",
 	"HOST",
 	"IMAGE_MAKER_URL",
 	"IMAGE_STORAGE_ACCESS_KEY",
