--- a/package.json
+++ b/package.json
@@ -24,28 +24,29 @@
   },
   "dependencies": {
     "@resin.io/device-types": "^10.5.0",
-    "@resin/pinejs": "^11.1.1",
+    "@resin/pinejs": "^11.2.1",
     "@types/basic-auth": "^1.1.3",
-    "@types/bluebird": "^3.5.29",
+    "@types/bluebird": "^3.5.30",
     "@types/cookie-session": "^2.0.38",
     "@types/express": "^4.17.2",
     "@types/express-brute": "0.0.36",
     "@types/express-brute-redis": "0.0.1",
     "@types/json-schema": "^7.0.4",
-    "@types/jsonwebtoken": "^8.3.7",
+    "@types/jsonwebtoken": "^8.3.8",
     "@types/lodash": "^4.14.149",
     "@types/memoizee": "^0.4.3",
-    "@types/node": "^12.12.28",
+    "@types/node": "^12.12.29",
     "@types/on-finished": "^2.3.1",
     "@types/passport-jwt": "^3.0.3",
     "@types/randomstring": "^1.1.6",
     "@types/raven": "^2.5.3",
     "@types/redis": "^2.8.16",
     "@types/request": "^2.48.4",
-    "@types/uuid": "^3.4.7",
+    "@types/uuid": "^3.4.8",
     "array-sort": "^1.0.0",
     "avsc": "^5.4.18",
-    "aws-sdk": "^2.624.0",
+    "aws-sdk": "^2.631.0",
+    "balena-semver": "^2.2.0",
     "basic-auth": "^2.0.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
@@ -72,30 +73,29 @@
     "redis": "^3.0.2",
     "request": "^2.88.2",
     "resin-device-config": "^5.1.1",
-    "resin-semver": "^1.6.0",
     "rsmq": "^0.12.0",
     "supervisor": "^0.12.0",
     "thirty-two": "^1.0.0",
     "ts-node": "^7.0.1",
     "typed-error": "^3.2.0",
-    "typescript": "^3.8.2",
+    "typescript": "^3.8.3",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.9",
+    "@types/chai": "^4.2.10",
     "@types/chai-as-promised": "^7.1.2",
     "@types/mocha": "^7.0.1",
     "@types/mockery": "^1.4.29",
-    "@types/sinon": "^7.5.1",
+    "@types/sinon": "^7.5.2",
     "@types/supertest": "^2.0.8",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "copyfiles": "^2.2.0",
     "husky": "^4.2.3",
-    "lint-staged": "^10.0.7",
-    "mocha": "^7.0.1",
+    "lint-staged": "^10.0.8",
+    "mocha": "^7.1.0",
     "mockery": "^2.1.0",
-    "resin-lint": "^3.3.0",
+    "resin-lint": "^3.3.1",
     "rimraf": "^3.0.2",
     "sinon": "^9.0.0",
     "supertest": "^4.0.2"
