add missing VPN_CONNECT_PROXY_PORT to confd env backend
Change-type: minor
Signed-off-by: ab77 <anton@balena.io>

--- a/config/confd_env_backend/conf.d/env.toml
+++ b/config/confd_env_backend/conf.d/env.toml
@@ -40,5 +40,6 @@ keys = [
 	"VPN_HOST",
 	"VPN_PORT",
 	"VPN_SERVICE_API_KEY",
-	"VPN_GUEST_API_KEY"
+	"VPN_GUEST_API_KEY",
+	"VPN_CONNECT_PROXY_PORT"
 ]
