--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@types/mockery": "^1.4.29",
     "@types/sinon": "^7.5.2",
     "@types/supertest": "^2.0.8",
+    "@types/temp": "^0.8.34",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "copyfiles": "^2.2.0",
@@ -96,9 +97,11 @@
     "mocha": "^7.1.0",
     "mockery": "^2.1.0",
     "resin-lint": "^3.3.1",
+    "resin-token": "^4.2.2",
     "rimraf": "^3.0.2",
     "sinon": "^9.0.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "temp": "^0.9.1"
   },
   "engines": {
     "node": ">=10.0"
