--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
     "@types/bluebird": "^3.5.30",
     "@types/cookie-session": "^2.0.38",
     "@types/express": "^4.17.2",
-    "@types/express-brute": "0.0.36",
-    "@types/express-brute-redis": "0.0.1",
     "@types/json-schema": "^7.0.4",
     "@types/jsonwebtoken": "^8.3.8",
     "@types/lodash": "^4.14.149",
@@ -55,8 +53,6 @@
     "cookie-session": "^1.4.0",
     "eventemitter3": "^4.0.0",
     "express": "^4.17.1",
-    "express-brute": "^1.0.1",
-    "express-brute-redis": "0.0.1",
     "fast-boot2": "^1.0.9",
     "ipaddr.js": "^1.9.1",
     "json-schema": "^0.2.5",
@@ -69,6 +65,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "randomstring": "^1.1.5",
+    "rate-limiter-flexible": "^2.0.0",
     "raven": "^2.6.4",
     "redis": "^3.0.2",
     "request": "^2.88.2",
