--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,5 +1,8 @@
 {
 	"*.ts": [
-		"resin-lint --typescript --fix"
+		"balena-lint --typescript --fix"
+	],
+	"*.js": [
+		"balena-lint --typescript --fix"
 	],
 }
