--- a/package.json
+++ b/package.json
@@ -16,24 +16,24 @@
     "fasttest-cleanup": "IMAGE_NAME=test-open-balena-api-fast ./automation/fasttest.sh --teardown",
     "build": "npm run clean && tsc --project ./tsconfig.build.json && copyup \"src/**/*.sbvr\" \"src/**/*.sql\" dist/",
     "clean": "rimraf dist/",
-    "lint": "resin-lint --typescript src/ test/ typings/ init.ts index.js && tsc --noEmit --project .",
-    "prettify": "resin-lint --typescript --fix src/ test/ typings/ init.ts index.js",
+    "lint": "balena-lint --typescript src/ test/ typings/ init.ts index.js && tsc --noEmit --project .",
+    "prettify": "balena-lint --typescript --fix src/ test/ typings/ init.ts index.js",
     "prepare": "npm run build",
     "test": "IMAGE_NAME=test-open-balena-api ./automation/test.sh",
     "posttest": "docker rmi test-open-balena-api"
   },
   "dependencies": {
     "@resin.io/device-types": "^10.5.0",
-    "@resin/pinejs": "^11.3.0",
+    "@resin/pinejs": "^11.3.1",
     "@types/basic-auth": "^1.1.3",
     "@types/bluebird": "^3.5.30",
-    "@types/cookie-session": "^2.0.38",
-    "@types/express": "^4.17.2",
+    "@types/cookie-session": "^2.0.39",
+    "@types/express": "^4.17.3",
     "@types/json-schema": "^7.0.4",
     "@types/jsonwebtoken": "^8.3.8",
     "@types/lodash": "^4.14.149",
     "@types/memoizee": "^0.4.3",
-    "@types/node": "^12.12.29",
+    "@types/node": "^12.12.31",
     "@types/on-finished": "^2.3.1",
     "@types/passport-jwt": "^3.0.3",
     "@types/randomstring": "^1.1.6",
@@ -42,14 +42,14 @@
     "@types/request": "^2.48.4",
     "@types/uuid": "^3.4.8",
     "array-sort": "^1.0.0",
-    "avsc": "^5.4.18",
-    "aws-sdk": "^2.631.0",
+    "avsc": "^5.4.19",
+    "aws-sdk": "^2.645.0",
     "balena-semver": "^2.3.0",
     "basic-auth": "^2.0.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "cookie-parser": "^1.4.4",
+    "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "eventemitter3": "^4.0.0",
     "express": "^4.17.1",
@@ -65,7 +65,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "randomstring": "^1.1.5",
-    "rate-limiter-flexible": "^2.0.0",
+    "rate-limiter-flexible": "^2.1.3",
     "raven": "^2.6.4",
     "redis": "^3.0.2",
     "request": "^2.88.2",
@@ -79,9 +79,10 @@
     "uuid": "^3.4.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.10",
+    "@balena/lint": "^5.0.2",
+    "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
-    "@types/mocha": "^7.0.1",
+    "@types/mocha": "^7.0.2",
     "@types/mockery": "^1.4.29",
     "@types/sinon": "^7.5.2",
     "@types/supertest": "^2.0.8",
@@ -90,13 +91,12 @@
     "chai-as-promised": "^7.1.1",
     "copyfiles": "^2.2.0",
     "husky": "^4.2.3",
-    "lint-staged": "^10.0.8",
-    "mocha": "^7.1.0",
+    "lint-staged": "^10.0.9",
+    "mocha": "^7.1.1",
     "mockery": "^2.1.0",
-    "resin-lint": "^3.3.1",
     "resin-token": "^4.2.2",
     "rimraf": "^3.0.2",
-    "sinon": "^9.0.0",
+    "sinon": "^9.0.1",
     "supertest": "^4.0.2",
     "temp": "^0.9.1"
   },
