--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "@resin.io/device-types": "^10.5.0",
-    "@resin/pinejs": "^11.3.0",
+    "@resin/pinejs": "11.4.0-shortcut-canaccess-permissions-ca6be96712da034789c3a187c975805b21421bfb",
     "@types/basic-auth": "^1.1.3",
     "@types/bluebird": "^3.5.30",
     "@types/cookie-session": "^2.0.38",
