--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/basic-auth": "^1.1.3",
     "@types/bluebird": "^3.5.30",
     "@types/cookie-session": "^2.0.39",
+    "@types/escape-html": "0.0.20",
     "@types/express": "^4.17.3",
     "@types/json-schema": "^7.0.4",
     "@types/jsonwebtoken": "^8.3.8",
@@ -51,6 +52,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
+    "escape-html": "^1.0.3",
     "eventemitter3": "^4.0.0",
     "express": "^4.17.1",
     "fast-boot2": "^1.0.9",
