Update to balena-device-config 6.x
Change-type: minor

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "array-sort": "^1.0.0",
     "avsc": "^5.4.19",
     "aws-sdk": "^2.645.0",
+    "balena-device-config": "^6.0.0",
     "balena-semver": "^2.3.0",
     "basic-auth": "^2.0.1",
     "bluebird": "^3.7.2",
@@ -71,7 +72,6 @@
     "raven": "^2.6.4",
     "redis": "^3.0.2",
     "request": "^2.88.2",
-    "resin-device-config": "^5.1.1",
     "rsmq": "^0.12.0",
     "supervisor": "^0.12.0",
     "thirty-two": "^1.0.0",
