--- a/package.json
+++ b/package.json
@@ -24,27 +24,27 @@
   },
   "dependencies": {
     "@resin.io/device-types": "^10.5.0",
-    "@resin/pinejs": "^12.3.3",
+    "@resin/pinejs": "^12.3.10",
     "@types/basic-auth": "^1.1.3",
-    "@types/bluebird": "^3.5.30",
+    "@types/bluebird": "^3.5.31",
     "@types/cookie-session": "^2.0.39",
-    "@types/escape-html": "0.0.20",
+    "@types/escape-html": "^1.0.0",
     "@types/express": "^4.17.3",
     "@types/json-schema": "^7.0.4",
-    "@types/jsonwebtoken": "^8.3.9",
-    "@types/lodash": "^4.14.149",
-    "@types/memoizee": "^0.4.3",
-    "@types/node": "^12.12.31",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.151",
+    "@types/memoizee": "^0.4.4",
+    "@types/node": "^12.12.39",
     "@types/on-finished": "^2.3.1",
     "@types/passport-jwt": "^3.0.3",
     "@types/randomstring": "^1.1.6",
     "@types/raven": "^2.5.3",
-    "@types/redis": "^2.8.17",
-    "@types/request": "^2.48.4",
-    "@types/uuid": "^3.4.8",
+    "@types/redis": "^2.8.21",
+    "@types/request": "^2.48.5",
+    "@types/uuid": "^7.0.3",
     "array-sort": "^1.0.0",
-    "avsc": "^5.4.20",
-    "aws-sdk": "^2.657.0",
+    "avsc": "^5.4.21",
+    "aws-sdk": "^2.679.0",
     "balena-device-config": "^6.2.0",
     "balena-semver": "^2.3.0",
     "basic-auth": "^2.0.1",
@@ -54,7 +54,7 @@
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "escape-html": "^1.0.3",
-    "eventemitter3": "^4.0.0",
+    "eventemitter3": "^4.0.4",
     "express": "^4.17.1",
     "fast-boot2": "^1.0.9",
     "ipaddr.js": "^1.9.1",
@@ -68,33 +68,33 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "randomstring": "^1.1.5",
-    "rate-limiter-flexible": "^2.1.3",
+    "rate-limiter-flexible": "^2.1.5",
     "raven": "^2.6.4",
     "redis": "^3.0.2",
     "request": "^2.88.2",
-    "rsmq": "^0.12.0",
+    "rsmq": "^0.12.2",
     "supervisor": "^0.12.0",
     "thirty-two": "^1.0.0",
     "ts-node": "^7.0.1",
     "typed-error": "^3.2.0",
-    "typescript": "^3.8.3",
-    "uuid": "^3.4.0"
+    "typescript": "^3.9.2",
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
-    "@balena/lint": "^5.0.2",
+    "@balena/lint": "^5.1.0",
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
     "@types/mocha": "^7.0.2",
     "@types/mockery": "^1.4.29",
-    "@types/sinon": "^7.5.2",
-    "@types/supertest": "^2.0.8",
+    "@types/sinon": "^9.0.1",
+    "@types/supertest": "^2.0.9",
     "@types/temp": "^0.8.34",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "copyfiles": "^2.2.0",
     "husky": "^4.2.5",
-    "lint-staged": "^10.1.4",
-    "mocha": "^7.1.1",
+    "lint-staged": "^10.2.4",
+    "mocha": "^7.1.2",
     "mockery": "^2.1.0",
     "resin-token": "^4.2.2",
     "rimraf": "^3.0.2",
