--- a/package.json
+++ b/package.json
@@ -24,27 +24,27 @@
   },
   "dependencies": {
     "@resin.io/device-types": "^10.5.0",
-    "@resin/pinejs": "^12.3.10",
+    "@resin/pinejs": "^12.3.14",
     "@types/basic-auth": "^1.1.3",
-    "@types/bluebird": "^3.5.31",
-    "@types/cookie-session": "^2.0.39",
+    "@types/bluebird": "^3.5.32",
+    "@types/cookie-session": "^2.0.40",
     "@types/escape-html": "^1.0.0",
     "@types/express": "^4.17.3",
-    "@types/json-schema": "^7.0.4",
+    "@types/json-schema": "^7.0.5",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/lodash": "^4.14.151",
+    "@types/lodash": "^4.14.155",
     "@types/memoizee": "^0.4.4",
-    "@types/node": "^12.12.39",
+    "@types/node": "^12.12.47",
     "@types/on-finished": "^2.3.1",
     "@types/passport-jwt": "^3.0.3",
     "@types/randomstring": "^1.1.6",
     "@types/raven": "^2.5.3",
-    "@types/redis": "^2.8.21",
+    "@types/redis": "^2.8.22",
     "@types/request": "^2.48.5",
-    "@types/uuid": "^7.0.3",
+    "@types/uuid": "^8.0.0",
     "array-sort": "^1.0.0",
     "avsc": "^5.4.21",
-    "aws-sdk": "^2.679.0",
+    "aws-sdk": "^2.695.0",
     "balena-device-config": "^6.2.0",
     "balena-semver": "^2.3.0",
     "basic-auth": "^2.0.1",
@@ -68,7 +68,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "randomstring": "^1.1.5",
-    "rate-limiter-flexible": "^2.1.5",
+    "rate-limiter-flexible": "^2.1.7",
     "raven": "^2.6.4",
     "redis": "^3.0.2",
     "request": "^2.88.2",
@@ -77,8 +77,8 @@
     "thirty-two": "^1.0.0",
     "ts-node": "^7.0.1",
     "typed-error": "^3.2.0",
-    "typescript": "^3.9.2",
-    "uuid": "^8.0.0"
+    "typescript": "^3.9.5",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "@balena/lint": "^5.1.0",
@@ -86,15 +86,15 @@
     "@types/chai-as-promised": "^7.1.2",
     "@types/mocha": "^7.0.2",
     "@types/mockery": "^1.4.29",
-    "@types/sinon": "^9.0.1",
+    "@types/sinon": "^9.0.4",
     "@types/supertest": "^2.0.9",
     "@types/temp": "^0.8.34",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "copyfiles": "^2.2.0",
+    "copyfiles": "^2.3.0",
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.4",
-    "mocha": "^7.1.2",
+    "lint-staged": "^10.2.10",
+    "mocha": "^8.0.1",
     "mockery": "^2.1.0",
     "resin-token": "^4.2.2",
     "rimraf": "^3.0.2",
@@ -109,5 +109,13 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "mocha": {
+    "reporter": "spec",
+    "sort": true,
+    "timeout": 20000,
+    "delay": true,
+    "exit": true,
+    "_": "index.js"
   }
 }
