--- a/package.json
+++ b/package.json
@@ -24,17 +24,19 @@
   },
   "dependencies": {
     "@balena/es-version": "^1.0.0",
-    "@balena/pinejs": "^13.7.0",
+    "@balena/pinejs": "^13.8.1",
     "@resin.io/device-types": "^10.5.0",
     "@types/basic-auth": "^1.1.3",
     "@types/bluebird": "^3.5.32",
     "@types/cookie-session": "^2.0.41",
     "@types/escape-html": "^1.0.0",
-    "@types/express": "^4.17.3",
+    "@types/express": "^4.17.7",
+    "@types/express-serve-static-core": "^4.17.9",
     "@types/json-schema": "^7.0.5",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.159",
     "@types/memoizee": "^0.4.4",
+    "@types/ndjson": "^1.5.0",
     "@types/node": "^12.12.54",
     "@types/on-finished": "^2.3.1",
     "@types/passport-jwt": "^3.0.3",
@@ -45,7 +47,7 @@
     "@types/uuid": "^8.3.0",
     "array-sort": "^1.0.0",
     "avsc": "^5.4.21",
-    "aws-sdk": "^2.731.0",
+    "aws-sdk": "^2.734.0",
     "balena-device-config": "^6.2.0",
     "balena-semver": "^2.3.0",
     "basic-auth": "^2.0.1",
@@ -58,13 +60,13 @@
     "eventemitter3": "^4.0.4",
     "express": "^4.17.1",
     "fast-boot2": "^1.1.0",
-    "ipaddr.js": "^1.9.1",
+    "ipaddr.js": "^2.0.0",
     "json-schema": "^0.2.5",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.20",
     "memoizee": "^0.4.14",
     "method-override": "^3.0.0",
-    "ndjson": "1.5.0",
+    "ndjson": "^2.0.0",
     "on-finished": "^2.3.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
