--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "redis": "^3.0.2",
     "request": "^2.88.2",
     "rsmq": "^0.12.2",
+    "strict-event-emitter-types": "^2.0.0",
     "supervisor": "^0.12.0",
     "thirty-two": "^1.0.0",
     "ts-node": "^7.0.1",
