Add request logging feature
Change-type: minor

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.160",
     "@types/memoizee": "^0.4.4",
+    "@types/morgan": "^1.9.1",
     "@types/ndjson": "^2.0.0",
     "@types/node": "^12.12.54",
     "@types/on-finished": "^2.3.1",
@@ -66,6 +67,7 @@
     "lodash": "^4.17.20",
     "memoizee": "^0.4.14",
     "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
     "ndjson": "^2.0.0",
     "on-finished": "^2.3.0",
     "passport": "^0.4.1",
