Start synchronizing resources with contracts
Change-type: minor
Signed-off-by: Stevche Radevski <stevche@balena.io>

--- a/config/confd/conf.d/env.toml
+++ b/config/confd/conf.d/env.toml
@@ -5,6 +5,11 @@ keys = [
 	"API_VPN_SERVICE_API_KEY",
 	"AUTH_RESINOS_REGISTRY_CODE",
 	"COOKIE_SESSION_SECRET",
+	"CONTRACTS_PUBLIC_REPO_OWNER",
+	"CONTRACTS_PUBLIC_REPO_NAME",
+	"CONTRACTS_PRIVATE_REPO_OWNER",
+	"CONTRACTS_PRIVATE_REPO_NAME",
+	"CONTRACTS_PRIVATE_REPO_TOKEN",
 	"DB_HOST",
 	"DB_PASSWORD",
 	"DB_PORT",
