--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/raven": "^2.5.3",
     "@types/redis": "^2.8.27",
     "@types/request": "^2.48.5",
+    "@types/tar": "^4.0.3",
     "@types/uuid": "^8.3.0",
     "array-sort": "^1.0.0",
     "avsc": "^5.4.22",
@@ -61,6 +62,7 @@
     "eventemitter3": "^4.0.7",
     "express": "^4.17.1",
     "fast-boot2": "^1.1.0",
+    "fast-glob": "^3.2.4",
     "ipaddr.js": "^2.0.0",
     "json-schema": "^0.2.5",
     "jsonwebtoken": "^8.5.1",
@@ -80,6 +82,7 @@
     "rsmq": "^0.12.2",
     "strict-event-emitter-types": "^2.0.0",
     "supervisor": "^0.12.0",
+    "tar": "^6.0.5",
     "thirty-two": "^1.0.0",
     "ts-node": "^9.0.0",
     "typed-error": "^3.2.1",
@@ -102,6 +105,7 @@
     "lint-staged": "^10.4.0",
     "mocha": "^8.1.3",
     "mockery": "^2.1.0",
+    "nock": "^13.0.4",
     "resin-token": "^4.2.2",
     "rimraf": "^3.0.2",
     "sinon": "^9.0.3",
