--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "clean": "rimraf dist/",
     "lint": "balena-lint --typescript src/ test/ typings/ init.ts index.js && tsc --noEmit --project .",
     "prettify": "balena-lint --typescript --fix src/ test/ typings/ init.ts index.js",
-    "prepare": "npm run build",
+    "prepack": "npm run build",
     "test": "IMAGE_NAME=test-open-balena-api ./automation/test.sh",
     "posttest": "docker rmi test-open-balena-api"
   },
   "dependencies": {
     "@balena/es-version": "^1.0.0",
-    "@balena/pinejs": "^14.1.1",
+    "@balena/pinejs": "^14.2.2",
     "@resin.io/device-types": "^10.5.0",
     "@types/basic-auth": "^1.1.3",
     "@types/bluebird": "^3.5.32",
@@ -34,22 +34,22 @@
     "@types/express-serve-static-core": "^4.17.13",
     "@types/json-schema": "^7.0.6",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/lodash": "^4.14.161",
+    "@types/lodash": "^4.14.162",
     "@types/memoizee": "^0.4.4",
     "@types/morgan": "^1.9.1",
     "@types/ndjson": "^2.0.0",
-    "@types/node": "^12.12.62",
+    "@types/node": "^12.12.67",
     "@types/on-finished": "^2.3.1",
     "@types/passport-jwt": "^3.0.3",
     "@types/randomstring": "^1.1.6",
     "@types/raven": "^2.5.3",
-    "@types/redis": "^2.8.27",
+    "@types/redis": "^2.8.28",
     "@types/request": "^2.48.5",
     "@types/tar": "^4.0.3",
     "@types/uuid": "^8.3.0",
     "array-sort": "^1.0.0",
-    "avsc": "^5.4.22",
-    "aws-sdk": "^2.765.0",
+    "avsc": "^5.5.2",
+    "aws-sdk": "^2.772.0",
     "balena-device-config": "^6.2.0",
     "balena-semver": "^2.3.0",
     "basic-auth": "^2.0.1",
@@ -87,15 +87,15 @@
     "ts-node": "^9.0.0",
     "typed-error": "^3.2.1",
     "typescript": "^4.0.3",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
-    "@balena/lint": "^5.2.0",
-    "@types/chai": "^4.2.12",
+    "@balena/lint": "^5.2.1",
+    "@types/chai": "^4.2.13",
     "@types/chai-as-promised": "^7.1.3",
     "@types/mocha": "^8.0.3",
     "@types/mockery": "^1.4.29",
-    "@types/sinon": "^9.0.7",
+    "@types/sinon": "^9.0.8",
     "@types/supertest": "^2.0.10",
     "@types/temp": "^0.8.34",
     "chai": "^4.2.0",
@@ -108,8 +108,8 @@
     "nock": "^13.0.4",
     "resin-token": "^4.2.2",
     "rimraf": "^3.0.2",
-    "sinon": "^9.1.0",
-    "supertest": "^4.0.2",
+    "sinon": "^9.2.0",
+    "supertest": "^5.0.0",
     "temp": "^0.9.1"
   },
   "engines": {
