--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "posttest": "docker rmi test-open-balena-api"
   },
   "dependencies": {
+    "@balena/abstract-sql-compiler": "^7.0.3",
     "@balena/es-version": "^1.0.0",
     "@balena/pinejs": "^14.2.4",
     "@resin.io/device-types": "^10.5.0",
