Add metrics for device logging
Change-type: patch
Signed-off-by: Thomas Manning <thomasm@balena.io>

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@balena/abstract-sql-compiler": "^7.0.3",
     "@balena/es-version": "^1.0.0",
     "@balena/pinejs": "^14.2.4",
+    "@balena/node-metrics-gatherer": "5.7.3",
     "@resin.io/device-types": "^10.5.0",
     "@types/basic-auth": "^1.1.3",
     "@types/bluebird": "^3.5.32",
@@ -68,7 +69,7 @@
     "json-schema": "^0.2.5",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "loki-grpc-client": "^1.0.0",
+    "loki-grpc-client": "1.0.1",
     "memoizee": "^0.4.14",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
