--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/request": "^2.48.5",
     "@types/tar": "^4.0.4",
     "@types/uuid": "^8.3.0",
+    "@types/validator": "^13.1.1",
     "array-sort": "^1.0.0",
     "avsc": "^5.5.3",
     "aws-sdk": "^2.814.0",
@@ -90,7 +91,8 @@
     "ts-node": "^9.1.1",
     "typed-error": "^3.2.1",
     "typescript": "^4.1.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "@balena/lint": "^5.3.0",
