Added optional environment variable configuration for contact repository branch
Change-type: minor
Signed-off-by: Micah Halter <micah@balena.io>

--- a/config/confd/conf.d/env.toml
+++ b/config/confd/conf.d/env.toml
@@ -7,8 +7,10 @@ keys = [
 	"COOKIE_SESSION_SECRET",
 	"CONTRACTS_PUBLIC_REPO_OWNER",
 	"CONTRACTS_PUBLIC_REPO_NAME",
+	"CONTRACTS_PUBLIC_REPO_BRANCH",
 	"CONTRACTS_PRIVATE_REPO_OWNER",
 	"CONTRACTS_PRIVATE_REPO_NAME",
+	"CONTRACTS_PRIVATE_REPO_BRANCH",
 	"CONTRACTS_PRIVATE_REPO_TOKEN",
 	"DB_HOST",
 	"DB_PASSWORD",
