Enable strict options by default and only disable specific ones
Change-type: patch

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,14 +5,15 @@
 		"declaration": true,
 		"outDir": "dist/",
 		"rootDir": "src/",
-		"noImplicitAny": true,
+		"strict": true,
+		"strictPropertyInitialization": false,
+		"strictFunctionTypes": false,
+		"noImplicitThis": false,
 		"noUnusedParameters": true,
 		"noUnusedLocals": true,
 		"preserveConstEnums": true,
 		"removeComments": true,
 		"sourceMap": true,
-		"strictNullChecks": true,
-		"strictBindCallApply": true,
 		"skipLibCheck": true,
 		"resolveJsonModule": true
 	},
