--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "@types/morgan": "^1.9.2",
     "@types/ndjson": "^2.0.0",
     "@types/node": "^14.14.35",
+    "@types/node-schedule": "^1.3.1",
     "@types/on-finished": "^2.3.1",
     "@types/passport-jwt": "^3.0.4",
     "@types/randomstring": "^1.1.6",
     "@types/raven": "^2.5.3",
     "@types/redis": "^2.8.28",
+    "@types/redlock": "^4.0.1",
     "@types/request": "^2.48.5",
     "@types/tar": "^4.0.4",
     "@types/uuid": "^8.3.0",
@@ -77,6 +79,7 @@
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "ndjson": "^2.0.0",
+    "node-schedule": "^1.3.3",
     "on-finished": "^2.3.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -84,6 +87,7 @@
     "rate-limiter-flexible": "^2.2.1",
     "raven": "^2.6.4",
     "redis": "^3.0.2",
+    "redlock": "^4.2.0",
     "request": "^2.88.2",
     "rsmq": "^0.12.3",
     "strict-event-emitter-types": "^2.0.0",
