--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@resin.io/device-types": "^10.5.0",
     "@types/basic-auth": "^1.1.3",
     "@types/bluebird": "^3.5.33",
+    "@types/cache-manager": "^3.4.0",
     "@types/cookie-session": "^2.0.42",
     "@types/escape-html": "^1.0.0",
     "@types/express": "^4.17.11",
@@ -62,6 +63,8 @@
     "basic-auth": "^2.0.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "cache-manager": "^3.4.3",
+    "cache-manager-redis-store": "^2.0.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
