--- a/circle.yml
+++ b/circle.yml
@@ -29,7 +29,7 @@ jobs:
             curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
       - run:
           name: Scan the local image with trivy
-          command: trivy -f table --no-progress ${DOCKER_IMAGE}:${CIRCLE_SHA1}
+          command: trivy -f table -o report.txt --no-progress ${DOCKER_IMAGE}:${CIRCLE_SHA1}
       - run:
           name: Test
           command: |
