--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
     "generate-model-types": "npm run materialize-config && echo '/**\n * This file is auto-generated with `npm run generate-model-types`\n */\n' > src/balena-model.ts && npx abstract-sql-compiler generate-types .materialized-config.json >> src/balena-model.ts",
     "build": "npm run clean && tsc --project ./tsconfig.build.json && copyup \"src/**/*.sbvr\" \"src/**/*.sql\" dist/",
     "clean": "rimraf dist/",
-    "lint": "balena-lint --typescript src/ test/ typings/ init.ts index.js && tsc --noEmit --project .",
-    "prettify": "balena-lint --typescript --fix src/ test/ typings/ init.ts index.js",
+    "lint": "balena-lint src/ test/ typings/ init.ts index.js && tsc --noEmit --project .",
+    "prettify": "balena-lint --fix src/ test/ typings/ init.ts index.js",
     "prepack": "npm run build",
     "test": "IMAGE_NAME=test-open-balena-api ./automation/test.sh",
     "posttest": "docker rmi test-open-balena-api"
   },
   "dependencies": {
-    "@balena/abstract-sql-compiler": "^7.12.2",
+    "@balena/abstract-sql-compiler": "^7.13.0",
     "@balena/es-version": "^1.0.0",
     "@balena/node-metrics-gatherer": "5.7.3",
-    "@balena/pinejs": "^14.22.2",
+    "@balena/pinejs": "^14.24.0",
     "@resin.io/device-types": "^10.5.0",
     "@types/basic-auth": "^1.1.3",
-    "@types/bluebird": "^3.5.33",
+    "@types/bluebird": "^3.5.35",
     "@types/cache-manager": "^3.4.0",
     "@types/cookie-session": "^2.0.42",
     "@types/escape-html": "^1.0.1",
@@ -39,11 +39,11 @@
     "@types/express-serve-static-core": "^4.17.19",
     "@types/json-schema": "^7.0.7",
     "@types/jsonwebtoken": "^8.5.1",
-    "@types/lodash": "^4.14.168",
+    "@types/lodash": "^4.14.170",
     "@types/memoizee": "^0.4.5",
     "@types/morgan": "^1.9.2",
     "@types/ndjson": "^2.0.0",
-    "@types/node": "^14.14.43",
+    "@types/node": "^14.17.0",
     "@types/node-schedule": "^1.3.1",
     "@types/on-finished": "^2.3.1",
     "@types/passport-jwt": "^3.0.4",
@@ -56,8 +56,8 @@
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.3",
     "array-sort": "^1.0.0",
-    "avsc": "^5.6.2",
-    "aws-sdk": "^2.895.0",
+    "avsc": "^5.7.0",
+    "aws-sdk": "^2.912.0",
     "balena-device-config": "^6.2.0",
     "balena-semver": "^2.3.0",
     "basic-auth": "^2.0.1",
@@ -86,8 +86,8 @@
     "on-finished": "^2.3.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "randomstring": "^1.1.5",
-    "rate-limiter-flexible": "^2.2.1",
+    "randomstring": "^1.2.1",
+    "rate-limiter-flexible": "^2.2.2",
     "raven": "^2.6.4",
     "redis": "^3.1.2",
     "redlock": "^4.2.0",
@@ -97,16 +97,16 @@
     "supervisor": "^0.12.0",
     "tar": "^6.1.0",
     "thirty-two": "^1.0.0",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.0.0",
     "typed-error": "^3.2.1",
     "typescript": "^4.2.4",
     "uuid": "^8.3.2",
     "validator": "^13.6.0"
   },
   "devDependencies": {
-    "@balena/lint": "^5.4.1",
-    "@types/chai": "^4.2.17",
-    "@types/chai-as-promised": "^7.1.3",
+    "@balena/lint": "^6.1.1",
+    "@types/chai": "^4.2.18",
+    "@types/chai-as-promised": "^7.1.4",
     "@types/mocha": "^8.2.2",
     "@types/mockery": "^1.4.29",
     "@types/sinon": "^10.0.0",
@@ -116,8 +116,8 @@
     "chai-as-promised": "^7.1.1",
     "copyfiles": "^2.4.1",
     "husky": "^4.3.8",
-    "lint-staged": "^10.5.4",
-    "mocha": "^8.3.2",
+    "lint-staged": "^11.0.0",
+    "mocha": "^8.4.0",
     "mockery": "^2.1.0",
     "nock": "^13.0.11",
     "resin-token": "^4.2.2",
