--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "mocha": "^8.4.0",
     "mockery": "^2.1.0",
     "nock": "^13.1.0",
+    "pinejs-client-supertest": "^1.3.1",
     "resin-token": "^4.2.2",
     "rimraf": "^3.0.2",
     "sinon": "^10.0.0",
