--- a/repo.yml
+++ b/repo.yml
@@ -6,3 +6,7 @@ upstream:
     url: 'https://github.com/balena-io/open-balena-base'
   - repo: 'typed-error'
     url: 'https://github.com/balena-io-modules/typed-error'
+  - repo: '@balena/node-metrics-gatherer'
+    url: 'https://github.com/balena-io-modules/node-metrics-gatherer'
+  - repo: 'loki-grpc-client'
+    url: 'https://github.com/balena-io-modules/node-loki-grpc-client'
