Drop circleCI and run tests on balenaCI
Change-type: patch
Signed-off-by: Thodoris Greasidis <thodoris@balena.io>

--- a/.resinci.yml
+++ b/.resinci.yml
@@ -8,3 +8,7 @@ docker:
       dockerfile: Dockerfile
       docker_repo: balena/open-balena-api
       publish: true
+    - path: .
+      dockerfile: Dockerfile.ci
+      docker_repo: balena/open-balena-api-ci-test
+      publish: false
