Added Loki environment variables to confd
Change-type: minor

--- a/config/confd/conf.d/env.toml
+++ b/config/confd/conf.d/env.toml
@@ -33,6 +33,9 @@ keys = [
 	"PRODUCTION_MODE",
 	"REDIS_HOST",
 	"REDIS_PORT",
+	"LOKI_HOST",
+	"LOKI_PORT",
+	"LOKI_WRITE_PCT",
 	"REGISTRY2_HOST",
 	"SENTRY_DSN",
 	"SUPERUSER_EMAIL",
