--- a/repo.yml
+++ b/repo.yml
@@ -1,6 +1,6 @@
 type: 'node'
 upstream:
-  - repo: pinejs
+  - repo: '@balena/pinejs'
     url: https://github.com/balena-io/pinejs
   - repo: 'open-balena-base'
     url: 'https://github.com/balena-io/open-balena-base'
