--- a/config/confd/conf.d/env.toml
+++ b/config/confd/conf.d/env.toml
@@ -16,6 +16,7 @@ keys = [
 	"DB_PASSWORD",
 	"DB_PORT",
 	"DB_USER",
+	"DB_NAME",
 	"DELTA_HOST",
 	"DEVICE_CONFIG_OPENVPN_CA",
 	"DEVICE_CONFIG_SSH_AUTHORIZED_KEYS",
