Explicitly enable compression for ndjson
Change-type: patch

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/cache-manager": "^4.0.1",
     "@types/cache-manager-ioredis": "^2.0.2",
     "@types/common-tags": "^1.8.1",
+    "@types/compressible": "^2.0.0",
     "@types/cookie-session": "^2.0.44",
     "@types/escape-html": "^1.0.2",
     "@types/express": "^4.17.13",
@@ -70,6 +71,7 @@
     "cache-manager": "^4.1.0",
     "cache-manager-ioredis": "^2.1.0",
     "common-tags": "^1.8.2",
+    "compressible": "^2.0.18",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
