Use a windows+dev-only friendly husky install method
Change-type: patch

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prepack": "npm run build",
     "test": "IMAGE_NAME=test-open-balena-api ./automation/test.sh",
     "posttest": "docker rmi test-open-balena-api",
-    "prepare": "[ \"$HUSKY\" = 0 ] || husky install"
+    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\""
   },
   "dependencies": {
     "@balena/abstract-sql-compiler": "^7.20.0",
