Adding forked Express.js compression lib to support brotli compression
Switch to compression-next

Change-type: patch

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/cache-manager-ioredis": "^2.0.2",
     "@types/common-tags": "^1.8.1",
     "@types/compressible": "^2.0.0",
+    "@types/compression-next": "^1.0.0",
     "@types/cookie-session": "^2.0.44",
     "@types/escape-html": "^1.0.2",
     "@types/express": "^4.17.13",
@@ -78,6 +79,7 @@
     "common-tags": "^1.8.2",
     "compressible": "^2.0.18",
     "compression": "^1.7.4",
+    "compression-next": "^1.0.3",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "escape-html": "^1.0.3",
